record API 수정